fix alignment on mobile

--- a/src/Work.css
+++ b/src/Work.css
@@ -56,6 +56,8 @@
   list-style-type: none;
   flex-wrap: wrap;
   gap: 5em;
+  margin: 0 0.25em 0 0.25em;
+  padding-inline-start: 0;
 }
 
 .checkbox {
